# REDR

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: cli.rs  config.rs  gui.rs  logger.rs  main.rs  scanner.rs  sys.rs
ui/: app.slint
